--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -1,4 +1,3 @@
-
 @article{colbourn2023modeling,
   title = {Modeling {{Contraception}} and {{Pregnancy}} in {{Malawi}}: {{A Thanzi La Onse Mathematical Modeling Study}}},
   shorttitle = {Modeling {{Contraception}} and {{Pregnancy}} in {{Malawi}}},
@@ -15,7 +14,7 @@
   abstract = {Malawi has high unmet need for contraception with a costed national plan to increase contraception use. Estimating how such investments might impact future population size in Malawi can help policymakers understand effects and value of policies to increase contraception uptake. We developed a new model of contraception and pregnancy using individual-level data capturing complexities of contraception initiation, switching, discontinuation, and failure by contraception method, accounting for differences by individual characteristics. We modeled contraception scale-up via a population campaign to increase initiation of contraception (Pop) and a postpartum family planning intervention (PPFP). We calibrated the model without new interventions to the UN World Population Prospects 2019 medium variant projection of births for Malawi. Without interventions Malawi's population passes 60 million in 2084; with Pop and PPFP interventions. it peaks below 35 million by 2100. We compare contraception coverage and costs, by method, with and without interventions, from 2023 to 2050. We estimate investments in contraception scale-up correspond to only 0.9 percent of total health expenditure per capita though could result in dramatic reductions of current pressures of very rapid population growth on health services, schools, land, and society, helping Malawi achieve national and global health and development goals.},
   copyright = {{\copyright} 2023 The Authors. Studies in Family Planning published by Wiley Periodicals LLC on behalf of Population Council.},
   langid = {english},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @misc{hallett2024healthcare,
@@ -33,7 +32,7 @@
   archiveprefix = {medRxiv},
   copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
   langid = {english},
-  note = {Overview of the model}
+  keywords = {Overview of the model}
 }
 
 @misc{hawryluk2020potential,
@@ -51,7 +50,7 @@
   archiveprefix = {medRxiv},
   copyright = {{\copyright} 2020, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
   langid = {english},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @article{mangal2021potential,
@@ -74,8 +73,7 @@
   copyright = {{\copyright} Author(s) (or their employer(s)) 2021. Re-use permitted under CC BY. Published by BMJ.. https://creativecommons.org/licenses/by/4.0/This is an open access article distributed in accordance with the Creative Commons Attribution 4.0 Unported (CC BY 4.0) license, which permits others to copy, redistribute, remix, transform and build upon this work for any purpose, provided the original work is properly cited, a link to the licence is given, and indication of whether changes were made. See:~https://creativecommons.org/licenses/by/4.0/.},
   langid = {english},
   pmid = {34301651},
-  keywords = {COVID-19,epidemiology,infection control,public health},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model,COVID-19,epidemiology,infection control,public health}
 }
 
 @article{mangal2024assessing,
@@ -93,7 +91,7 @@
   url = {https://www.sciencedirect.com/science/article/pii/S2214109X24002596},
   urldate = {2024-11-06},
   abstract = {Background Malawi is progressing towards UNAIDS and WHO End TB Strategy targets to eliminate HIV/AIDS and tuberculosis. We aimed to assess the prospective effect of achieving these goals on the health and health system of the country and the influence of consumable constraints. Methods In this modelling study, we used the Thanzi la Onse (Health for All) model, which is an individual-based multi-disease simulation model that simulates HIV and tuberculosis transmission, alongside other diseases (eg, malaria, non-communicable diseases, and maternal diseases), and gates access to essential medicines according to empirical estimates of availability. The model integrates dynamic disease modelling with health system engagement behaviour, health system use, and capabilities (ie, personnel and consumables). We used 2018 data on the availability of HIV and tuberculosis consumables (for testing, treatment, and prevention) across all facility levels of the country to model three scenarios of HIV and tuberculosis programme scale-up from Jan 1, 2023, to Dec 31, 2033: a baseline scenario, when coverage remains static using existing consumable constraints; a constrained scenario, in which prioritised interventions are scaled up with fixed consumable constraints; and an unconstrained scenario, in which prioritised interventions are scaled up with maximum availability of all consumables related to HIV and tuberculosis care. Findings With uninterrupted medical supplies, in Malawi, we projected HIV and tuberculosis incidence to decrease to 26 (95\% uncertainty interval [UI] 19--35) cases and 55 (23--74) cases per 100\hphantom{,}000 person-years by 2033 (from 152 [98--195] cases and 123 [99--160] cases per 100\hphantom{,}000 person-years in 2023), respectively, with programme scale-up, averting a total of 12{$\cdot$}21 million (95\% UI 11{$\cdot$}39--14{$\cdot$}16) disability-adjusted life-years. However, the effect was compromised by restricted access to key medicines, resulting in approximately 58\hphantom{,}700 additional deaths (33\hphantom{,}400 [95\% UI 22\hphantom{,}000--41\hphantom{,}000] due to AIDS and 25\hphantom{,}300 [19\hphantom{,}300--30\hphantom{,}400] due to tuberculosis) compared with the unconstrained scenario. Between 2023 and 2033, eliminating HIV treatment stockouts could avert an estimated 12\hphantom{,}100 deaths compared with the baseline scenario, and improved access to tuberculosis prevention medications could prevent 5600 deaths in addition to those achieved through programme scale-up alone. With programme scale-up under the constrained scenario, consumable stockouts are projected to require an estimated 14{$\cdot$}3 million extra patient-facing hours between 2023 and 2033, mostly from clinical or nursing staff, compared with the unconstrained scenario. In 2033, with enhanced screening, 188\hphantom{,}000 (81\%) of 232\hphantom{,}900 individuals projected to present with active tuberculosis could start tuberculosis treatment within 2 weeks of initial presentation if all required consumables were available, but only 8600 (57\%) of 15\hphantom{,}100 presenting under the baseline scenario. Interpretation Ignoring frailties in the health-care system, in particular the potential non-availability of consumables, in projections of HIV and tuberculosis programme scale-up might risk overestimating potential health impacts and underestimating required health system resources. Simultaneous health system strengthening alongside programme scale-up is crucial, and should yield greater benefits to population health while mitigating the strain on a heavily constrained health-care system. Funding Wellcome and UK Research and Innovation as part of the Global Challenges Research Fund.},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @misc{mangal2024decade,
@@ -110,7 +108,7 @@
   archiveprefix = {medRxiv},
   copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
   langid = {english},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @article{manningsmith2022estimating,
@@ -127,8 +125,7 @@
   url = {https://doi.org/10.1186/s40621-022-00386-6},
   urldate = {2024-11-06},
   abstract = {Road traffic injuries are a significant cause of death and disability globally. However, in some countries the exact health burden caused by road traffic injuries is unknown. In Malawi, there is no central reporting mechanism for road traffic injuries and so the exact extent of the health burden caused by road traffic injuries is hard to determine. A limited number of models predict the incidence of mortality due to road traffic injury in Malawi. These estimates vary greatly, owing to differences in assumptions, and so the health burden caused on the population by road traffic injuries remains unclear.},
-  keywords = {Health burden,Individual-based model,Malawi,Road traffic injuries},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model,Health burden,Individual-based model,Malawi,Road traffic injuries}
 }
 
 @article{mohan2024factors,
@@ -146,7 +143,7 @@
   url = {https://www.sciencedirect.com/science/article/pii/S2214109X24000950},
   urldate = {2024-11-06},
   abstract = {Background Medical consumable stock-outs negatively affect health outcomes not only by impeding or delaying the effective delivery of services but also by discouraging patients from seeking care. Consequently, supply chain strengthening is being adopted as a key component of national health strategies. However, evidence on the factors associated with increased consumable availability is limited. Methods In this study, we used the 2018--19 Harmonised Health Facility Assessment data from Malawi to identify the factors associated with the availability of consumables in level 1 facilities, ie, rural hospitals or health centres with a small number of beds and a sparsely equipped operating room for minor procedures. We estimate a multilevel logistic regression model with a binary outcome variable representing consumable availability (of 130 consumables across 940 facilities) and explanatory variables chosen based on current evidence. Further subgroup analyses are carried out to assess the presence of effect modification by level of care, facility ownership, and a categorisation of consumables by public health or disease programme, Malawi's Essential Medicine List classification, whether the consumable is a drug or not, and level of average national availability. Findings Our results suggest that the following characteristics had a positive association with consumable availability---level 1b facilities or community hospitals had 64\% (odds ratio [OR] 1{$\cdot$}64, 95\% CI 1{$\cdot$}37--1{$\cdot$}97) higher odds of consumable availability than level 1a facilities or health centres, Christian Health Association of Malawi and private-for-profit ownership had 63\% (1{$\cdot$}63, 1{$\cdot$}40--1{$\cdot$}89) and 49\% (1{$\cdot$}49, 1{$\cdot$}24--1{$\cdot$}80) higher odds respectively than government-owned facilities, the availability of a computer had 46\% (1{$\cdot$}46, 1{$\cdot$}32--1{$\cdot$}62) higher odds than in its absence, pharmacists managing drug orders had 85\% (1{$\cdot$}85, 1{$\cdot$}40--2{$\cdot$}44) higher odds than a drug store clerk, proximity to the corresponding regional administrative office (facilities greater than 75 km away had 21\% lower odds [0{$\cdot$}79, 0{$\cdot$}63--0{$\cdot$}98] than facilities within 10 km of the district health office), and having three drug order fulfilments in the 3 months before the survey had 14\% (1{$\cdot$}14, 1{$\cdot$}02--1{$\cdot$}27) higher odds than one fulfilment in 3 months. Further, consumables categorised as vital in Malawi's Essential Medicine List performed considerably better with 235\% (OR 3{$\cdot$}35, 95\% CI 1{$\cdot$}60--7{$\cdot$}05) higher odds than other essential or non-essential consumables and drugs performed worse with 79\% (0{$\cdot$}21, 0{$\cdot$}08--0{$\cdot$}51) lower odds than other medical consumables in terms of availability across facilities. Interpretation Our results provide evidence on the areas of intervention with potential to improve consumable availability. Further exploration of the health and resource consequences of the strategies discussed will be useful in guiding investments into supply chain strengthening. Funding UK Research and Innovation as part of the Global Challenges Research Fund (Thanzi La Onse; reference MR/P028004/1), the Wellcome Trust (Thanzi La Mawa; reference 223120/Z/21/Z), the UK Medical Research Council, the UK Department for International Development, and the EU (reference MR/R015600/1).},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @article{molaro2024new,
@@ -166,8 +163,7 @@
   urldate = {2024-11-06},
   abstract = {An efficient allocation of limited resources in low-income settings offers the opportunity to improve population-health outcomes given the available health system capacity. Efforts to achieve this are often framed through the lens of ``health benefits packages'' (HBPs), which seek to establish which services the public healthcare system should include in its provision. Analytic approaches widely used to weigh evidence in support of different interventions and inform the broader HBP deliberative process however have limitations. In this work, we propose the individual-based Thanzi La Onse (TLO) model as a uniquely-tailored tool to assist in the evaluation of Malawi-specific HBPs while addressing these limitations. By mechanistically modelling---and calibrating to extensive, country-specific data---the incidence of disease, health-seeking behaviour, and the capacity of the healthcare system to meet the demand for care under realistic constraints on human resources for health available, we were able to simulate the health gains achievable under a number of plausible HBP strategies for the country. We found that the HBP emerging from a linear constrained optimisation analysis (LCOA) achieved the largest health gain---{$\sim$}8\% reduction in disability adjusted life years (DALYs) between 2023 and 2042 compared to the benchmark scenario---by concentrating resources on high-impact treatments. This HBP however incurred a relative excess in DALYs in the first few years of its implementation. Other feasible approaches to prioritisation were assessed, including service prioritisation based on patient characteristics, rather than service type. Unlike the LCOA-based HBP, this approach achieved consistent health gains relative to the benchmark scenario on a year- to-year basis, and a 5\% reduction in DALYs over the whole period, which suggests an approach based upon patient characteristics might prove beneficial in the future.},
   langid = {english},
-  keywords = {Child and adolescent health policy,Epidemiology,Health care facilities,Health care policy,Health systems strengthening,HIV,Malawi,Medical risk factors},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model,Child and adolescent health policy,Epidemiology,Health care facilities,Health care policy,Health systems strengthening,HIV,Malawi,Medical risk factors}
 }
 
 @misc{molaro2024potential,
@@ -185,7 +181,7 @@
   archiveprefix = {medRxiv},
   copyright = {{\copyright} 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
   langid = {english},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model}
 }
 
 @article{ngambi2020crosssectional,
@@ -202,8 +198,7 @@
   abstract = {IntroductionHealth seeking behaviour (HSB) refers to actions taken by individuals who are ill in order to find appropriate remedy. Most studies on HSB have only examined one symptom or covered only a specific geographical location within a country. In this study, we used a representative sample of adults to explore the factors associated with HSB in response to 30 symptoms reported by adult Malawians in 2016.MethodsWe used the 2016 Malawi Integrated Household Survey dataset. We fitted a multilevel logistic regression model of likelihood of `seeking care at a health facility' using a forward step-wise selection method, with age, sex and reported symptoms entered as a priori variables. We calculated the odds ratios (ORs) and their associated 95\% confidence intervals (95\% CI). We set the level of statistical significance at P \&lt; 0.05.Results Of 6909 adults included in the survey, 1907 (29\%) reported symptoms during the 2 weeks preceding the survey. Of these, 937 (57\%) sought care at a health facility. Adults in urban areas were more likely to seek health care at a health facility than those in rural areas (AOR = 1.65, 95\% CI: 1.19--2.30, P = 0.003). Females had a higher likelihood of seeking care from health facilities than males (AOR = 1.26, 95\% CI: 1.03--1.59, P = 0.029). Being of higher wealth status was associated with a higher likelihood of seeking care from a health facility (AOR = 1.58, 95\% CI: 1.16--2.16, P = 0.004). Having fever and eye problems were associated with higher likelihood of seeking care at a health facility, while having headache, stomach ache and respiratory tract infections were associated with lower likelihood of seeking care at a health facility.ConclusionThis study has shown that there is a need to understand and address individual, socioeconomic and geographical barriers to health seeking to increase access and appropriate use of health care and fast-track progress towards Universal Health Coverage among the adult population.},
   copyright = {Copyright (c) 2021},
   langid = {english},
-  keywords = {Health inequality,health seeking behaviour,integrated household survey,Malawi},
-  note = {Healthcare seeking behaviour}
+  keywords = {Health inequality,health seeking behaviour,Healthcare seeking behaviour,integrated household survey,Malawi}
 }
 
 @article{ngambi2020factors,
@@ -222,8 +217,7 @@
   abstract = {Objective To characterise health seeking behaviour (HSB) and determine its predictors amongst children in Malawi in 2016. Methods We used the 2016 Malawi Integrated Household Survey data set. The outcome of interest was HSB, defined as seeking care at a health facility amongst people who reported one or more of a list of possible symptoms given on the questionnaire in the past two weeks. We fitted a multivariate logistic regression model of HSB using a forward step-wise selection method, with age, sex and symptoms entered as a priori variables. Results Of 5350 children, 1666 (32\%) had symptoms in the past two weeks. Of the 1666, 1008 (61\%) sought care at health facility. The children aged 5--14 years were less likely to be taken to health facilities for health care than those aged 0--4 years. Having fever vs. not having fever and having a skin problem vs. not having skin problem were associated with increased likelihood of HSB. Having a headache vs. not having a headache was associated with lower likelihood of accessing care at health facilities (AOR = 0.50, 95\% CI: 0.26--0.96, P = 0.04). Children from urban areas were more likely to be taken to health facilities for health care (AOR = 1.81, 95\% CI: 1.17--2.85, P = 0.008), as were children from households with a high wealth status (AOR = 1.86, 95\% CI: 1.25--2.78, P = 0.02). Conclusion There is a need to understand and address individual, socio-economic and geographical barriers to health seeking to increase access and use of health care and fast-track progress towards Universal Health Coverage.},
   copyright = {{\copyright} 2020 John Wiley \& Sons Ltd},
   langid = {english},
-  keywords = {determinants of health,healthcare seeking behaviour,Malawi},
-  note = {Healthcare seeking behaviour}
+  keywords = {determinants of health,healthcare seeking behaviour,Healthcare seeking behaviour,Malawi}
 }
 
 @article{ngambi2022sociodemographic,
@@ -243,8 +237,7 @@
   urldate = {2024-11-06},
   abstract = {Introduction In 2016, the WHO published recommendations increasing the number of recommended antenatal care (ANC) visits per pregnancy from four to eight. Prior to the implementation of this policy, coverage of four ANC visits has been suboptimal in many low-income settings. In this study we explore socio-demographic factors associated with early initiation of first ANC contact and attending at least four ANC visits (``ANC4+'') in Malawi using the Malawi Demographic and Health Survey (MDHS) data collected between 2004 and 2016, prior to the implementation of new recommendations. Methods We combined data from the 2004--5, 2010 and 2015--16 MDHS using Stata version 16. Participants included all women surveyed between the ages of 15--49 who had given birth in the five years preceding the survey. We conducted weighted univariate, bivariate and multivariable logistic regression analysis of the effects of each of the predictor variables on the binary endpoint of the woman attending at least four ANC visits and having the first ANC attendance within or before the four months of pregnancy (ANC4+). To determine whether a factor was included in the model, the likelihood ratio test was used with a statistical significance of P{$<$} 0.05 as the threshold. Results We evaluated data collected in surveys in 2004/5, 2010 and 2015/6 from 26386 women who had given birth in the five years before being surveyed. The median gestational age, in months, at the time of presenting for the first ANC visit was 5 (inter quartile range: 4--6). The proportion of women initiating ANC4+ increased from 21.3\% in 2004--5 to 38.8\% in 2015--16. From multivariate analysis, there was increasing trend in ANC4+ from women aged 20--24 years (adjusted odds ratio (aOR) = 1.27, 95\%CI:1.05--1.53, P = 0.01) to women aged 45--49 years (aOR = 1.91, 95\%CI:1.18--3.09, P = 0.008) compared to those aged 15--19 years. Women from richest socio-economic position ((aOR = 1.32, 95\%CI:1.12--1.58, P{$<$}0.001) were more likely to demonstrate ANC4+ than those from low socio-economic position. Additionally, women who had completed secondary (aOR = 1.24, 95\%CI:1.02--1.51, P = 0.03) and tertiary (aOR = 2.64, 95\%CI:1.65--4.22, P{$<$}0.001) education were more likely to report having ANC4+ than those with no formal education. Conversely increasing parity was associated with a reduction in likelihood of ANC4+ with women who had previously delivered 2--3 (aOR = 0.74, 95\%CI:0.63--0.86, P{$<$}0.001), 4--5 (aOR = 0.65, 95\%CI:0.53--0.80, P{$<$}0.001) or greater than 6 (aOR = 0.61, 95\%CI: 0.47--0.79, {$<$}0.001) children being less likely to demonstrate ANC4+. Conclusion The proportion of women reporting ANC4+ and of key ANC interventions in Malawi have increased significantly since 2004. However, we found that most women did not access the recommended number of ANC visits in Malawi, prior to the 2016 WHO policy change which may mean that women are less likely to undertake the 2016 WHO recommendation of 8 contacts per pregnancy. Additionally, our results highlighted significant variation in coverage according to key socio-demographic variables which should be considered when devising national strategies to ensure that all women access the appropriate frequency of ANC visits during their pregnancy.},
   langid = {english},
-  keywords = {Age groups,Antenatal care,Children,Educational attainment,HIV,Low income countries,Malawi,Pregnancy},
-  note = {Healthcare seeking behaviour}
+  keywords = {Age groups,Antenatal care,Children,Educational attainment,Healthcare seeking behaviour,HIV,Low income countries,Malawi,Pregnancy}
 }
 
 @article{she2024changes,
@@ -263,8 +256,23 @@
   urldate = {2024-11-06},
   abstract = {Introduction The COVID-19 pandemic and the restriction policies implemented by the Government of Malawi may have disrupted routine health service utilisation. We aimed to find evidence for such disruptions and quantify any changes by service type and level of health care. Methods We extracted nationwide routine health service usage data for 2015--2021 from the electronic health information management systems in Malawi. Two datasets were prepared: unadjusted and adjusted; for the latter, unreported monthly data entries for a facility were filled in through systematic rules based on reported mean values of that facility or facility type and considering both reporting rates and comparability with published data. Using statistical descriptive methods, we first described the patterns of service utilisation in pre-pandemic years (2015--2019). We then tested for evidence of departures from this routine pattern, i.e., service volume delivered being below recent average by more than two standard deviations was viewed as a substantial reduction, and calculated the cumulative net differences of service volume during the pandemic period (2020--2021), in aggregate and within each specific facility. Results Evidence of disruptions were found: from April 2020 to December 2021, services delivered of several types were reduced across primary and secondary levels of care--including inpatient care (-20.03\% less total interactions in that period compared to the recent average), immunisation (-17.61\%), malnutrition treatment (-34.5\%), accidents and emergency services (-16.03\%), HIV (human immunodeficiency viruses) tests (-27.34\%), antiretroviral therapy (ART) initiations for adults (-33.52\%), and ART treatment for paediatrics (-41.32\%). Reductions of service volume were greatest in the first wave of the pandemic during April-August 2020, and whereas some service types rebounded quickly (e.g., outpatient visits from -17.7\% to +3.23\%), many others persisted at lower level through 2021 (e.g., under-five malnutrition treatment from -15.24\% to -42.23\%). The total reduced service volume between April 2020 and December 2021 was 8 066 956 (-10.23\%), equating to 444 units per 1000 persons. Conclusion We have found substantial evidence for reductions in health service delivered in Malawi during the COVID-19 pandemic which may have potential health consequences, the effect of which should inform how decisions are taken in the future to maximise the resilience of healthcare system during similar events.},
   langid = {english},
-  keywords = {Antiretroviral therapy,COVID 19,Health care facilities,HIV,HIV vaccines,Malawi,Pandemics,Virus testing},
-  note = {Analyses using the model}
+  keywords = {Analyses using the model,Antiretroviral therapy,COVID 19,Health care facilities,HIV,HIV vaccines,Malawi,Pandemics,Virus testing}
 }
 
-
+@article{she2024health,
+  title = {Health Workforce Needs in {{Malawi}}: Analysis of the {{Thanzi La Onse}} Integrated Epidemiological Model of Care},
+  shorttitle = {Health Workforce Needs in {{Malawi}}},
+  author = {She, Bingling and Mangal, Tara D. and Prust, Margaret L. and Heung, Stephanie and Chalkley, Martin and Colbourn, Tim and Collins, Joseph H. and Graham, Matthew M. and Jewell, Britta and Joshi, Purava and Li Lin, Ines and Mnjowe, Emmanuel and Mohan, Sakshi and Molaro, Margherita and Phillips, Andrew N. and Revill, Paul and Smith, Robert Manning and Tamuri, Asif U. and Twea, Pakwanja D. and Manthalu, Gerald and {Mfutso-Bengo}, Joseph and Hallett, Timothy B.},
+  year = {2024},
+  month = sep,
+  journal = {Human Resources for Health},
+  volume = {22},
+  number = {1},
+  pages = {66},
+  issn = {1478-4491},
+  doi = {10.1186/s12960-024-00949-2},
+  url = {https://doi.org/10.1186/s12960-024-00949-2},
+  urldate = {2024-11-06},
+  abstract = {To make the best use of health resources, it is crucial to understand the healthcare needs of a population---including how needs will evolve and respond to changing epidemiological context and patient behaviour---and how this compares to the capabilities to deliver healthcare with the existing workforce. Existing approaches to planning either rely on using observed healthcare demand from a fixed historical period or using models to estimate healthcare needs within a narrow domain (e.g., a specific disease area or health programme). A new data-grounded modelling method is proposed by which healthcare needs and the capabilities of the healthcare workforce can be compared and analysed under a range of scenarios: in particular, when there is much greater propensity for healthcare seeking.},
+  keywords = {Analyses using the model,Health care needs,Health services,Health system interactions,Healthcare workforce,Model design}
+}
