Updating publication data from Zotero

--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -1,4 +1,67 @@
 
+@article{tafesse_faith-based_2021,
+	title = {Faith-based provision of sexual and reproductive healthcare in {Malawi}},
+	volume = {282},
+	issn = {02779536},
+	url = {https://journals.scholarsportal.info/details/02779536/v282icomplete/nfp_fposarhim.xml},
+	doi = {10.1016/j.socscimed.2021.113997},
+	abstract = {Abstract Faith-based organisations constitute the second largest healthcare providers in Sub-Saharan Africa but their religious values might be in conflict with providing some sexual and reproductive health services. We undertake regression analysis on data detailing client-provider interactions from a facility census in Malawi and examine whether religious ownership of facilities is associated with the degree of adherence to family planning guidelines. We find that faith-based organisations offer fewer services related to the investigation and prevention of sexually transmitted infections (STIs) and the promotion of condom use. The estimates are robust to several sensitivity checks on the impact of client selection. Given the prevalence of faith-based facilities in Sub-Saharan Africa, our results suggest that populations across the region may be at risk from inadequate sexual and reproductive healthcare provision which could exacerbate the incidence of STIs, such as HIV/AIDS, and unplanned pregnancies. Highlights Investigates whether faith-based facilities provide fewer sexual health services. Uses data on client-provider interactions from a facility-level census from Malawi. Faith-based providers are less likely to investigate STIs and promote condoms. Results are robust to matching and are not driven by client selection.},
+	number = {Complete},
+	urldate = {2024-11-07},
+	journal = {Social Science \& Medicine},
+	author = {Tafesse, Wiktoria and Chalkley, Martin},
+	year = {2021},
+	note = {Publisher: Elsevier},
+	keywords = {Faith-based providers, Healthcare, Healthcare provision, Least developed country, Ownership, Sexual and reproductive health},
+}
+
+@misc{li_lin_impact_2024,
+	address = {Rochester, NY},
+	type = {{SSRN} {Scholarly} {Paper}},
+	title = {The {Impact} and {Cost}-{Effectiveness} of {Pulse} {Oximetry} and {Oxygen} on {Acute} {Lower} {Respiratory} {Infection} {Outcomes} in {Children} {Under}-5 in {Malawi}: {A} {Modelling} {Study}},
+	shorttitle = {The {Impact} and {Cost}-{Effectiveness} of {Pulse} {Oximetry} and {Oxygen} on {Acute} {Lower} {Respiratory} {Infection} {Outcomes} in {Children} {Under}-5 in {Malawi}},
+	url = {https://papers.ssrn.com/abstract=4947417},
+	doi = {10.2139/ssrn.4947417},
+	abstract = {Background: Acute Lower Respiratory Infections (ALRI) are the leading cause of post-neonatal death in children under-5 globally. The impact, costs, and cost-effectiveness of routine pulse oximetry and oxygen on ALRI outcomes at scale remain unquantified. Methods: We evaluate the impact and cost-effectiveness of scaling up pulse oximetry and oxygen on childhood ALRI outcomes in Malawi using a new and detailed individual-based model, together with a comprehensive costing assessment for 2024 that includes both capital and operational expenditures. We model 15 scenarios ranging from no pulse oximetry or oxygen (null scenario) to high coverage (90\% pulse oximetry usage, and 80\% oxygen availability) across the health system. Cost-effectiveness results are presented in incremental cost-effectiveness ratio (ICER) and incremental net health benefit (INHB) using Malawi-specific cost-effectiveness threshold of \$80 per Disability-Adjusted Life Year (DALY) averted. Findings: The cost-effective strategy is the full scale-up of both pulse oximetry and oxygen to 90\% usage rate and 80\% availability, respectively. This combination results in 71\% of hypoxaemic ALRI cases accessing oxygen, averting 73,100 DALYs in the first year of implementation and 29\% of potential ALRI deaths, at an ICER of \$34 per DALY averted and \$894 per death averted. The INHB is 42,200 net DALYs averted. Interpretation: Pulse oximetry and oxygen are complementary cost-effective interventions in Malawi, where health expenditure is low, and should be scaled-up in parallel. Funding: UKRI, Wellcome Trust, DFID, EU, CHAI, Unitaid.Declaration of Interest: Besides funding from the Wellcome Trust and UK Research and Innovation going towards authors’ institutions, some authors took on private projects, outside the submitted work. ILL declares receiving consulting fees from ICDDR-B for her work for the Lancet Commission on Medical Oxygen Security related to this study. TC declares consulting fees donated to his institution from the Global Fund for related work, personal consulting fees from the UN Economic Commission for Africa, and non-paid work chairing a Trial Steering Committee for a trial of adolescent mental health interventions in Nepal. ANP declares receiving consulting fees from the Bill \& Melinda Gates Foundation. All other authors declare no competing interests.Ethical Approval: The Thanzi La Onse project received ethical approval from the College of Medicine Malawi Research Ethics Committee (COMREC, P.10/19/2820) in Malawi. Only anonymized secondary data are used in the Thanzi La Onse model including in the ALRI model used in this paper; therefore, individual informed consent was not required.},
+	language = {en},
+	urldate = {2024-11-10},
+	publisher = {Social Science Research Network},
+	author = {Li Lin, Ines and McCollum, Eric D. and Buckley, Eric Thomas and Cambiano, Valentina and Collins, Joseph H. and Graham, Matthew M. and Janoušková, Eva and King, Carina and Lufesi, Norman and Mangal, Tara Danielle and Mfutso-Bengo, Joseph Matthew and Mohan, Sakshi and Molaro, Margherita and Nkhoma, Dominic and Nsona, Humphreys and Rothkopf, Alexander and She, Bingling and Smith, Lisa and Tamuri, Asif U. and Revill, Paul and Phillips, Andrew N. and Hallett, Timothy B. and Colbourn, Tim},
+	month = sep,
+	year = {2024},
+	keywords = {Analyses using the model, Malawi, acute lower respiratory infections, cost-effectiveness, oxygen, pulse oximetry},
+}
+
+@article{tafesse_difference_2024,
+	title = {The difference in clinical knowledge between staff employed at faith-based and public facilities in {Malawi}},
+	volume = {11},
+	issn = {2167-2415},
+	url = {https://cjgh.org/articles/10.15566/cjgh.v11i1.853},
+	doi = {10.15566/cjgh.v11i1.853},
+	abstract = {A peer-reviewed, scholarly, and multidisciplinary journal on global health policy and practice, promoting evidence-based and thoughtful analysis on effective and innovative approaches to global health from an integrated Christian perspective. The Journal publishes evidence-based research and Christian reflection addressing the biological, social, environmental, psychological, and spiritual determinants of health in a global context.\&nbsp; The broad scope of the journal facilitates actionable learning and capacity building in development contexts within a scholarly framework.\&nbsp; Topics include:  Community and Public Health (Health Promotion/Prevention, Nutrition and Food Security, Environmental Health, Maternal and Child Health, Community Development) Health Care Services (Primary Health Care, Surgical Service, Disaster and Emergency, Rehabilitative services, Mental Health, Palliative Care) Organization (Administration and Finance, Policy and Advocacy, Workforce) Mission and Health (Theology, Outreach, Transformational Development) Conditions of Special Interest (HIV/AIDS, Non-Communicable Disease, Neglected Tropical Diseases)},
+	language = {en-US},
+	number = {1},
+	urldate = {2024-11-07},
+	journal = {Christian Journal for Global Health},
+	author = {Tafesse, Wiktoria and Chalkley, Martin},
+	month = feb,
+	year = {2024},
+	keywords = {Healthcare provision},
+}
+
+@misc{hallett_thanzi_2023,
+	title = {The {Thanzi} {La} {Onse} {Model}},
+	url = {https://zenodo.org/records/10144016},
+	abstract = {Our fundamental aim is to develop the use of epidemiological and economic science to effect a step-change in the way that health priorities are addressed through policy interventions in low-income countries. We are doing this by developing a model that represents explicitly the generation of health gains in a population, which can be used to examine the effect of resource allocation, management and clinical practice, in order to contribute to informing decision-making.},
+	urldate = {2024-05-20},
+	publisher = {Zenodo},
+	author = {Hallett, Timothy and Phillips, Andrew and Tamuri, Asif and Colbourn, Tim and Collins, Joseph and Hawryluk, Iwona and Jewell, Britta and Li Lin, Ines and Mangal, Tara and Manning-Smith, Robbie and Mohan, Sakshi and Ng'ambi, Wingston and She, Bingling and Gillman, Matthew and Giordano, Mosè and Graham, Matthew and Mnjowe, Emmanuel and Piatek, Stefan and Cooper, Jonathan and Salmanidou, Dimitra and Graham, William and Molaro, Margherita and Janoušková, Eva},
+	month = nov,
+	year = {2023},
+	doi = {10.5281/zenodo.10144016},
+	keywords = {Epidemiology, Health-Economics, Healthcare Systems, Individual-based Modelling, Simulation Modelling},
+}
+
 @article{ngambi_cross-sectional_2020,
 	title = {A cross-sectional study on factors associated with health seeking behaviour of {Malawians} aged 15+ years in 2016},
 	volume = {32},
