Add published version of overview paper and remove pre-print from list

--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -1,4 +1,28 @@
 
+@article{hallett_estimates_2024,
+	title = {Estimates of resource use in the public-sector health-care system and the effect of strengthening health-care services in {Malawi} during 2015–19: a modelling study ({Thanzi} {La} {Onse})},
+	issn = {2214-109X},
+	shorttitle = {Estimates of resource use in the public-sector health-care system and the effect of strengthening health-care services in {Malawi} during 2015–19},
+	url = {https://www.sciencedirect.com/science/article/pii/S2214109X24004133},
+	doi = {10.1016/S2214-109X(24)00413-3},
+	abstract = {Background
+In all health-care systems, decisions need to be made regarding allocation of available resources. Evidence is needed for these decisions, especially in low-income countries. We aimed to estimate how health-care resources provided by the public sector were used in Malawi during 2015–19 and to estimate the effects of strengthening health-care services.
+Methods
+For this modelling study, we used the Thanzi La Onse model, an individual-based simulation model. The scope of the model was health care provided by the public sector in Malawi during 2015–19. Health-care services were delivered during health-care system interaction (HSI) events, which we characterised as occurring at a particular facility level and requiring a particular number of appointments. We developed mechanistic models for the causes of death and disability that were estimated to account for approximately 81\% of deaths and approximately 72\% of disability-adjusted life-years (DALYs) in Malawi during 2015–19, according to the Global Burden of Disease (GBD) estimates; we computed DALYs incurred in the population as the sum of years of life lost and years lived with disability. The disease models could interact with one another and with the underlying properties of each person. Each person in the Thanzi La Onse model had specific properties (eg, sex, district of residence, wealth percentile, smoking status, and BMI, among others), for which we measured distribution and evolution over time using demographic and health survey data. We also estimated the effect of different types of health-care system improvement.
+Findings
+We estimated that the public-sector health-care system in Malawi averted 41·2 million DALYs (95\% UI 38·6–43·8) during 2015–19, approximately half of the 84·3 million DALYs (81·5–86·9) that the population would otherwise have incurred. DALYs averted were heavily skewed to children aged 0–4 years due to services averting DALYs that would be caused by acute lower respiratory tract infection, HIV or AIDS, malaria, or neonatal disorders. DALYs averted among adults were mostly attributed to HIV or AIDS and tuberculosis. Under a scenario whereby each appointment took the time expected and health-care workers did not work for longer than contracted, the health-care system in Malawi during 2015–19 would have averted only 19·1 million DALYs (95\% UI 17·1–22·4), suggesting that approximately 21·3 million DALYS (20·0–23·6) of total effect were derived through overwork of health-care workers. If people becoming ill immediately accessed care, all referrals were successfully completed, diagnostic accuracy of health-care workers was as good as possible, and consumables (ie, medicines) were always available, 28·2\% (95\% UI 25·7–30·9) more DALYS (ie, 12·2 million DALYs [95\% UI 10·9–13·8]) could be averted.
+Interpretation
+The health-care system in Malawi provides substantial health gains with scarce resources. Strengthening interventions could potentially increase these gains, so should be a priority for investigation and investment. An individual-based simulation model of health-care service delivery is valuable for health-care system planning and strengthening.
+Funding
+The Wellcome Trust, UK Research and Innovation, the UK Medical Research Council, and Community Jameel.},
+	urldate = {2024-11-14},
+	journal = {The Lancet Global Health},
+	author = {Hallett, Timothy B and Mangal, Tara D and Tamuri, Asif U and Arinaminpathy, Nimalan and Cambiano, Valentina and Chalkley, Martin and Collins, Joseph H and Cooper, Jonathan and Gillman, Matthew S and Giordano, Mosè and Graham, Matthew M and Graham, William and Hawryluk, Iwona and Janoušková, Eva and Jewell, Britta L and Lin, Ines Li and Manning Smith, Robert and Manthalu, Gerald and Mnjowe, Emmanuel and Mohan, Sakshi and Molaro, Margherita and Ng'ambi, Wingston and Nkhoma, Dominic and Piatek, Stefan and Revill, Paul and Rodger, Alison and Salmanidou, Dimitra and She, Bingling and Smit, Mikaela and Twea, Pakwanja D and Colbourn, Tim and Mfutso-Bengo, Joseph and Phillips, Andrew N},
+	month = nov,
+	year = {2024},
+	keywords = {Overview of the model},
+}
+
 @article{tafesse_faith-based_2021,
 	title = {Faith-based provision of sexual and reproductive healthcare in {Malawi}},
 	volume = {282},
@@ -47,19 +71,6 @@
 	month = feb,
 	year = {2024},
 	keywords = {Healthcare provision},
-}
-
-@misc{hallett_thanzi_2023,
-	title = {The {Thanzi} {La} {Onse} {Model}},
-	url = {https://zenodo.org/records/10144016},
-	abstract = {Our fundamental aim is to develop the use of epidemiological and economic science to effect a step-change in the way that health priorities are addressed through policy interventions in low-income countries. We are doing this by developing a model that represents explicitly the generation of health gains in a population, which can be used to examine the effect of resource allocation, management and clinical practice, in order to contribute to informing decision-making.},
-	urldate = {2024-05-20},
-	publisher = {Zenodo},
-	author = {Hallett, Timothy and Phillips, Andrew and Tamuri, Asif and Colbourn, Tim and Collins, Joseph and Hawryluk, Iwona and Jewell, Britta and Li Lin, Ines and Mangal, Tara and Manning-Smith, Robbie and Mohan, Sakshi and Ng'ambi, Wingston and She, Bingling and Gillman, Matthew and Giordano, Mosè and Graham, Matthew and Mnjowe, Emmanuel and Piatek, Stefan and Cooper, Jonathan and Salmanidou, Dimitra and Graham, William and Molaro, Margherita and Janoušková, Eva},
-	month = nov,
-	year = {2023},
-	doi = {10.5281/zenodo.10144016},
-	keywords = {Epidemiology, Health-Economics, Healthcare Systems, Individual-based Modelling, Simulation Modelling},
 }
 
 @article{ngambi_cross-sectional_2020,
@@ -309,26 +320,6 @@ Wellcome and UK Research and Innovation as part of the Global Challenges Researc
 	note = {Publisher: Public Library of Science},
 	keywords = {Analyses using the model, Child and adolescent health policy, Epidemiology, HIV, Health care facilities, Health care policy, Health systems strengthening, Malawi, Medical risk factors},
 	pages = {e1012462},
-}
-
-@misc{hallett_healthcare_2024,
-	title = {A {Healthcare} {Service} {Delivery} and {Epidemiological} {Model} for {Investigating} {Resource} {Allocation} for {Health}: {The} {Thanzi} {La} {Onse} {Model}},
-	copyright = {© 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
-	shorttitle = {A {Healthcare} {Service} {Delivery} and {Epidemiological} {Model} for {Investigating} {Resource} {Allocation} for {Health}},
-	url = {https://www.medrxiv.org/content/10.1101/2024.01.04.24300834v1},
-	doi = {10.1101/2024.01.04.24300834},
-	abstract = {Background Decisions need to be made in all healthcare systems about the allocation of available resources with the aim of improving population health. Evidence is needed for these decisions, which can have enormous consequences for population health, especially in lower-income settings.
-Methods We address this need using an individual-based simulation model of healthcare need and service delivery that we have developed for Malawi, drawing on demographic, epidemiological and routine healthcare system data (on facilities, staff, and consumables). We compare the model’s simulated outputs with available data and estimate the impact that the healthcare system is having currently. We analyse the effects of improvements in healthcare access, clinician performance and consumables availability.
-Findings Malawi’s healthcare system averted 40 million Disability-Adjusted Life-Years (DALYs) in the five-year period to end-2019, which is half of the total DALYS that the population (total size: 19 million in 2020) would otherwise incur. This impact is strongly focussed on young children (mediated largely by programmes addressing respiratory infections, HIV/AIDS and malaria) and also by the HIV/AIDS and TB programmes (among adults). More services seem to be delivered than would be expected based on the number of staff and expected time needed for services. Nevertheless, the additional services that are provided (through service times being reduced or additional HCW hours worked) account for half the impact of the healthcare system (i.e., ∼20 million DALYS averted). If system improvements gave ill persons immediate access to healthcare, led to optimal referral and diagnosis accuracy, and eliminated consumable stock-outs, the overall impact of the healthcare system could increase by up to ∼30\% (12 million more DALYS averted).
-Conclusions The healthcare system in Malawi generates substantial health gains to the population with very limited resources. Strengthening interventions could potentially increase these gains considerably and so should be a priority for investigation and investment. A detailed individual-based simulation model of healthcare service delivery is a valuable tool for healthcare system planning and for evaluating proposals for healthcare system strengthening.},
-	language = {en},
-	urldate = {2024-11-06},
-	publisher = {medRxiv},
-	author = {Hallett, Timothy B. and Mangal, Tara D. and Tamuri, Asif U. and Arinaminpathy, Nimalan and Cambiano, Valentina and Chalkley, Martin and Collins, Joseph H. and Cooper, Jonathan and Gillman, Matthew S. and Giordano, Mosè and Graham, Matthew M. and Graham, William and Janoušková, Eva and Jewell, Britta L. and Lin, Ines Li and Smith, Robert Manning and Manthalu, Gerald and Mnjowe, Emmanuel and Mohan, Sakshi and Molaro, Margherita and Ng’ambi, Wingston and Nkhoma, Dominic and Piatek, Stefan and Revill, Paul and Rodger, Alison and Salmanidou, Dimitra and She, Bingling and Smit, Mikaela and Twea, Pakwanja D. and Colbourn, Tim and Mfutso-Bengo, Joseph and Phillips, Andrew N.},
-	month = jan,
-	year = {2024},
-	note = {Pages: 2024.01.04.24300834},
-	keywords = {Overview of the model},
 }
 
 @misc{mangal_decade_2024,
