--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -1,4 +1,57 @@
 
+@misc{nkhoma_thanzi_2024,
+	title = {Thanzi {La} {Mawa} ({TLM}) datasets: health worker time and motion, patient exit interview and follow-up, and health facility resources, perceptions and quality in {Malawi}},
+	copyright = {© 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	shorttitle = {Thanzi {La} {Mawa} ({TLM}) datasets},
+	url = {https://www.medrxiv.org/content/10.1101/2024.11.14.24317330v1},
+	doi = {10.1101/2024.11.14.24317330},
+	abstract = {The Thanzi La Mawa (TLM) study aims to enhance understanding of healthcare delivery and resource allocation in Malawi by capturing real-world data across a range of health facilities. To inform the Thanzi La Onse (TLO) model, which is the first comprehensive health system model developed for any country, this study uses a cross-sectional, mixed-methods approach to collect data on healthcare worker productivity, patient experiences, facility resources, and care quality. The TLM dataset includes information from 29 health facilities sampled across Malawi, covering facility audits, patient exit interviews, follow-ups, time and motion studies, and healthcare worker interviews, conducted from January to May 2024.
+Through these data collection tools, the TLM study gathers insights into critical areas such as time allocation of health workers, healthcare resource availability, patient satisfaction, and overall service quality. This data is crucial for enhancing the TLO model’s capacity to answer complex policy questions related to health resource allocation in Malawi. The study also offers a structured framework that other countries in East, Central, and Southern Africa can adopt to improve their healthcare systems.
+By documenting methods and protocols, this paper provides valuable guidance for researchers and policymakers interested in healthcare system evaluation and improvement. Given the formal adoption of the TLO model in Malawi, the TLM dataset serves as a foundation for ongoing analyses into quality of care, healthcare workforce efficiency, and patient outcomes. This study seeks to support informed decision-making and future implementation of comprehensive healthcare system models in similar settings.},
+	language = {en},
+	urldate = {2024-11-18},
+	publisher = {medRxiv},
+	author = {Nkhoma, Dominic and Chitsulo, Precious and Mulwafu, Watipaso and Mnjowe, Emmanuel and Tafesse, Wiktoria and Mohan, Sakshi and Hallet, Timothy B. and Collins, Joseph H. and Revill, Paul and Chalkley, Martin and Mwapasa, Victor and Mfutso-Bengo, Joseph and Colbourn, Tim},
+	month = nov,
+	year = {2024},
+	note = {ISSN: 2431-7330
+Pages: 2024.11.14.24317330},
+	keywords = {Data Collection - Protocol and Analyses},
+}
+
+@article{rao_using_2024,
+	title = {Using economic analysis to inform health resource allocation: lessons from {Malawi}},
+	volume = {3},
+	issn = {2731-7501},
+	shorttitle = {Using economic analysis to inform health resource allocation},
+	doi = {10.1007/s44250-024-00115-4},
+	abstract = {Despite making remarkable strides in improving health outcomes, Malawi faces concerns about sustaining the progress achieved due to limited fiscal space and donor dependency. The imperative for efficient health spending becomes evident, necessitating strategic allocation of resources to areas with the greatest impact on mortality and morbidity. Health benefits packages hold promise in supporting efficient resource allocation. However, despite defining these packages over the last two decades, their development and implementation have posed significant challenges for Malawi. In response, the Malawian government, in collaboration with the Thanzi la Onse Programme, has developed a set of tools and frameworks, primarily based on cost-effectiveness analysis, to guide the design of health benefits packages likely to achieve national health objectives. This review provides an overview of these tools and frameworks, accompanied by other related analyses, aiming to better align health financing with health benefits package prioritization. The paper is organized around five key policy questions facing decision-makers: (i) What interventions should the health system deliver? (ii) How should resources be allocated geographically? (iii) How should investments in health system inputs be prioritized? (iv) How should equity considerations be incorporated into resource allocation decisions? and (v) How should evidence generation be prioritized to support resource allocation decisions (guiding research)? The tools and frameworks presented here are intended to be compatible for use in diverse and often complex healthcare systems across Africa, supporting the health resource allocation process as countries pursue Universal Health Coverage.},
+	language = {eng},
+	number = {1},
+	journal = {Discover Health Systems},
+	author = {Rao, Megha and Nkhoma, Dominic and Mohan, Sakshi and Twea, Pakwanja and Chilima, Benson and Mfutso-Bengo, Joseph and Ochalek, Jessica and Hallett, Timothy B. and Phillips, Andrew N. and McGuire, Finn and Woods, Beth and Walker, Simon and Sculpher, Mark and Revill, Paul},
+	year = {2024},
+	pmid = {39022531},
+	pmcid = {PMC11249770},
+	keywords = {Theoretical Frameworks},
+	pages = {48},
+}
+
+@inproceedings{mohan_potential_2024,
+	address = {AUT},
+	title = {The {Potential} {Impact} of {Investments} in {Supply} {Chain} {Strengthening} ({Retrospective} analysis)},
+	url = {https://doi.org/10.15124/yao-7b1g-n044},
+	abstract = {Supply chain strengthening (SCS) is a key component in the overall strategy of countries to move towards universal health coverage. Estimating the health benefit of investments in such health system strengthening (HSS) interventions has been challenging because these benefits are mediated through their impact on the delivery of a wide range of healthcare interventions, creating a problem of attribution. We overcome this challenge by simulating the impact of SCS within the Thanzi La Onse (TLO) model, an individual-based simulation of health care needs and service delivery for Malawi, drawing upon demographic, epidemiological and routine healthcare system data (on facilities, staff and consumables). In this study, we combine the results of a previous inferential analysis on the factors associated with consumable availability at health facilities in Malawi with the TLO model to estimate the potential for health impact of SCS interventions in the country. We do this by first predicting the expected change in consumable availability by making a positive change to these factors using previously fitted multi-level regression models of consumable availability. We then run the TLO model with these improved consumable availability estimates. The difference in the DALYs accrued by the simulated population under the baseline availability of consumables and that under improved consumable availability estimates gives us the potential for health impact of SCS interventions which would influence these factors. Countries regularly need to make decisions on allocating resources across a range of health interventions (including service delivery and HSS). Crucial to guide these decisions is a value-for-money (VfM) assessment comparing these interventions. Our analysis offers the first step in estimating the VfM of a sample of SCS interventions and can guide Malawi in its evaluation of alternative health sector investments.},
+	language = {en},
+	urldate = {2024-11-18},
+	booktitle = {European {Health} {Economics} {Association} ({EuHEA}) conference 2024},
+	publisher = {York},
+	author = {Mohan, Sakshi},
+	month = nov,
+	year = {2024},
+	keywords = {Analyses using the model},
+}
+
 @article{hallett_estimates_2024,
 	title = {Estimates of resource use in the public-sector health-care system and the effect of strengthening health-care services in {Malawi} during 2015–19: a modelling study ({Thanzi} {La} {Onse})},
 	issn = {2214-109X},
