Add DOI to bibtex entry

--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -50,6 +50,7 @@ Pages: 2024.11.14.24317330},
 	month = nov,
 	year = {2024},
 	keywords = {Analyses using the model},
+	doi = {10.15124/yao-7b1g-n044},
 }
 
 @article{hallett_estimates_2024,
