update bib citation

--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -2,10 +2,13 @@
 @misc{mohan_framework_2024,
 	title = {Theory of Change Framework for Economic Evaluation Using Health System Models},
 	url = {https://pure.york.ac.uk/portal/en/publications/theory-of-change-framework-for-economic-evaluation-using-health-s},
+	shorttitle = {Theory of Change Framework},
 	abstract = {All-disease health systems models ({HSMs}) represent the new frontier of economic evaluation to help guide sector-wide resource allocation, allowing for decision analysis in the context of interacting health system capacity constraints. Although there are frameworks for how health systems and their relationship with health outcomes may be characterised, there is a gap in the literature in providing a comprehensive list of health system components and a template for impact pathways from health system components to health outcomes to consider when designing, using and communicating {HSMs} for economic evaluation. This paper provides a conceptual framework to serve as a theoretical underpinning for the design and use of {HSMs} developed for economic evaluation. The framework builds upon previous literature as well as our experience developing the Thanzi La Onse ({TLO}) Model for Malawi.},
+	urldate = {2024-11-20},
 	publisher = {York Research Database},
 	author = {Mohan, Sakshi and Revill, Paul and Chalkley, Martin and Colbourn, Tim and Mangal, Tara and Molaro, Margherita and Nkhoma, Dominic and She, Bingling and Walker, Simon and Phillips, Andrew and Hallet, Timothy and Sculpher, Mark},
-	date = {2024-11-20},
+	month = nov,
+	year = {2024},
 	keywords = {Theoretical frameworks},
 }
 
