Add Theory of Change Framework preprint (#1523)
* add Theory of Change framework paper

* update bib citation

* run update-publications

---------

Co-authored-by: sakshimohan <sakshi.mohan@york.ac.uk>

--- a/docs/publications.bib
+++ b/docs/publications.bib
@@ -1,4 +1,31 @@
 
+@misc{mohan_framework_2024,
+	title = {Theory of {Change} {Framework} for {Economic} {Evaluation} {Using} {Health} {System} {Models}},
+	url = {https://pure.york.ac.uk/portal/en/publications/theory-of-change-framework-for-economic-evaluation-using-health-s},
+	abstract = {All-disease health systems models (HSMs) represent the new frontier of economic evaluation to help guide sector-wide resource allocation, allowing for decision analysis in the context of interacting health system capacity constraints. Although there are frameworks for how health systems and their relationship with health outcomes may be characterised, there is a gap in the literature in providing a comprehensive list of health system components and a template for impact pathways from health system components to health outcomes to consider when designing, using and communicating HSMs for economic evaluation. This paper provides a conceptual framework to serve as a theoretical underpinning for the design and use of HSMs developed for economic evaluation. The framework builds upon previous literature as well as our experience developing the Thanzi La Onse (TLO) Model for Malawi.},
+	publisher = {York Research Database},
+	author = {Mohan, Sakshi and Revill, Paul and Chalkley, Martin and Colbourn, Tim and Mangal, Tara and Molaro, Margherita and Nkhoma, Dominic and She, Bingling and Walker, Simon and Phillips, Andrew and Hallet, Timothy and Sculpher, Mark},
+	month = nov,
+	year = {2024},
+	keywords = {Theoretical frameworks},
+}
+
+@inproceedings{mohan_potential_2024,
+	address = {AUT},
+	title = {The {Potential} {Impact} of {Investments} in {Supply} {Chain} {Strengthening} ({Retrospective} analysis)},
+	url = {https://doi.org/10.15124/yao-7b1g-n044},
+	doi = {10.15124/yao-7b1g-n044},
+	abstract = {Supply chain strengthening (SCS) is a key component in the overall strategy of countries to move towards universal health coverage. Estimating the health benefit of investments in such health system strengthening (HSS) interventions has been challenging because these benefits are mediated through their impact on the delivery of a wide range of healthcare interventions, creating a problem of attribution. We overcome this challenge by simulating the impact of SCS within the Thanzi La Onse (TLO) model, an individual-based simulation of health care needs and service delivery for Malawi, drawing upon demographic, epidemiological and routine healthcare system data (on facilities, staff and consumables). In this study, we combine the results of a previous inferential analysis on the factors associated with consumable availability at health facilities in Malawi with the TLO model to estimate the potential for health impact of SCS interventions in the country. We do this by first predicting the expected change in consumable availability by making a positive change to these factors using previously fitted multi-level regression models of consumable availability. We then run the TLO model with these improved consumable availability estimates. The difference in the DALYs accrued by the simulated population under the baseline availability of consumables and that under improved consumable availability estimates gives us the potential for health impact of SCS interventions which would influence these factors. Countries regularly need to make decisions on allocating resources across a range of health interventions (including service delivery and HSS). Crucial to guide these decisions is a value-for-money (VfM) assessment comparing these interventions. Our analysis offers the first step in estimating the VfM of a sample of SCS interventions and can guide Malawi in its evaluation of alternative health sector investments.},
+	language = {en},
+	urldate = {2024-11-18},
+	booktitle = {European {Health} {Economics} {Association} ({EuHEA}) conference 2024},
+	publisher = {White Rose Research Repository},
+	author = {Mohan, Sakshi},
+	month = nov,
+	year = {2024},
+	keywords = {Analyses using the model},
+}
+
 @misc{nkhoma_thanzi_2024,
 	title = {Thanzi {La} {Mawa} ({TLM}) datasets: health worker time and motion, patient exit interview and follow-up, and health facility resources, perceptions and quality in {Malawi}},
 	copyright = {© 2024, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
@@ -35,22 +62,6 @@ Pages: 2024.11.14.24317330},
 	pmcid = {PMC11249770},
 	keywords = {Theoretical Frameworks},
 	pages = {48},
-}
-
-@inproceedings{mohan_potential_2024,
-	address = {AUT},
-	title = {The {Potential} {Impact} of {Investments} in {Supply} {Chain} {Strengthening} ({Retrospective} analysis)},
-	url = {https://doi.org/10.15124/yao-7b1g-n044},
-	abstract = {Supply chain strengthening (SCS) is a key component in the overall strategy of countries to move towards universal health coverage. Estimating the health benefit of investments in such health system strengthening (HSS) interventions has been challenging because these benefits are mediated through their impact on the delivery of a wide range of healthcare interventions, creating a problem of attribution. We overcome this challenge by simulating the impact of SCS within the Thanzi La Onse (TLO) model, an individual-based simulation of health care needs and service delivery for Malawi, drawing upon demographic, epidemiological and routine healthcare system data (on facilities, staff and consumables). In this study, we combine the results of a previous inferential analysis on the factors associated with consumable availability at health facilities in Malawi with the TLO model to estimate the potential for health impact of SCS interventions in the country. We do this by first predicting the expected change in consumable availability by making a positive change to these factors using previously fitted multi-level regression models of consumable availability. We then run the TLO model with these improved consumable availability estimates. The difference in the DALYs accrued by the simulated population under the baseline availability of consumables and that under improved consumable availability estimates gives us the potential for health impact of SCS interventions which would influence these factors. Countries regularly need to make decisions on allocating resources across a range of health interventions (including service delivery and HSS). Crucial to guide these decisions is a value-for-money (VfM) assessment comparing these interventions. Our analysis offers the first step in estimating the VfM of a sample of SCS interventions and can guide Malawi in its evaluation of alternative health sector investments.},
-	language = {en},
-	urldate = {2024-11-18},
-	booktitle = {European {Health} {Economics} {Association} ({EuHEA}) conference 2024},
-	publisher = {York},
-	author = {Mohan, Sakshi},
-	month = nov,
-	year = {2024},
-	keywords = {Analyses using the model},
-	doi = {10.15124/yao-7b1g-n044},
 }
 
 @article{hallett_estimates_2024,
