New notebook for investigating the differences in LE between our method and WPP

--- a/src/scripts/longterm_projections/investigate_LE.ipynb
+++ b/src/scripts/longterm_projections/investigate_LE.ipynb
@@ -62,7 +62,7 @@
     "            year=df['date'].dt.year).groupby(['year'])['year'].count()),\n",
     "    do_scaling=True)\n",
     "nd_first_half_deaths = nd_first_half.fillna(0)\n",
-    "nd_first_half_deaths.to_csv(\"nd_first_half_deaths.csv\")\n",
+    "#nd_first_half_deaths.to_csv(\"nd_first_half_deaths.csv\")\n",
     "#print(nd_first_half_deaths/neo_deaths)\n",
     "\n",
     "print(summarize(nd_first_half_deaths/neo_deaths))\n",
