--- a/src/scripts/climate_change/CIL_CMIP6_downscaling.ipynb
+++ b/src/scripts/climate_change/CIL_CMIP6_downscaling.ipynb
@@ -660,8 +660,7 @@
     "base_dir = \"/Users/rem76/Desktop/Climate_change_health/Data/Precipitation_data/Downscaled_CMIP6_data_CIL/\"\n",
     "nc_file_directory = os.path.join(base_dir, 'nc_files')\n",
     "# NB these are daily \n",
-    "scenarios = [\"ssp245\"]#, \"ssp585\"]  \n",
-    "#scenarios = [\"ssp585\"]  \n",
+    "scenarios = [\"ssp245\", \"ssp585\"]  \n",
     "\n",
     "data_by_model_and_grid = {}\n",
     "for scenario in scenarios:\n",
@@ -810,14 +809,6 @@
      ]
     }
    ],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "data_all_models",
-   "id": "40563902df7b9233",
-   "outputs": [],
    "execution_count": null
   },
   {
